MAJ profil image

--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -53,7 +53,7 @@
 								</a>
 							</button>
 						</div>
-						<img width="50px" height="200px" class="content-wrapper-img rounded-circle " src="{{ app.user.image }}" alt="image de profile">
+						<img width="50px" height="200px" class="content-wrapper-img rounded-circle desk" src="{{ app.user.image }}" alt="image de profile">
 					</div>
 
 				</div>
