--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>Site Transports de izydrive</title>
+		<title>IZY DRIVE | Transport privé</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="ce site permet de mettre en valeur nos compétences en tant que junior dev par la mise en place d'un site VTC destinés pouir les professionnels du transports">
