+MAJ Correction Phrase.

--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -49,7 +49,7 @@
 								</a>
 							</button>
 							<button class="content-button  animate__flipInY animate__animated">
-								<a class="text-decoration-none text-white" href="{{ path('app_forgot_password_request', {'id': app.user.id}) }}">Modifier le mots de passe
+								<a class="text-decoration-none text-white" href="{{ path('app_forgot_password_request', {'id': app.user.id}) }}">Modifier votre mot de passe
 								</a>
 							</button>
 						</div>
